@@ -450,7 +450,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
 
     public static final class MultiFields implements Iterable<FieldMapper>, ToXContent {
 
-        private static final MultiFields EMPTY = new MultiFields(Collections.emptyMap());
+        private static final MultiFields EMPTY = new MultiFields(Map.of());
 
         public static MultiFields empty() {
             return EMPTY;
@@ -485,18 +485,18 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
             }
 
             public MultiFields build(Mapper.Builder mainFieldBuilder, MapperBuilderContext context) {
-                if (mapperBuilders.isEmpty()) {
+                final int count = mapperBuilders.size();
+                if (count == 0) {
                     return empty();
-                } else {
-                    Map<String, FieldMapper> mappers = new HashMap<>();
-                    context = context.createChildContext(mainFieldBuilder.name());
-                    for (Map.Entry<String, Function<MapperBuilderContext, FieldMapper>> entry : this.mapperBuilders.entrySet()) {
-                        String key = entry.getKey();
-                        FieldMapper mapper = entry.getValue().apply(context);
-                        mappers.put(key, mapper);
-                    }
-                    return new MultiFields(Collections.unmodifiableMap(mappers));
                 }
+                context = context.createChildContext(mainFieldBuilder.name());
+                @SuppressWarnings({ "unchecked", "rawtypes" })
+                final Map.Entry<String, FieldMapper>[] mappers = new Map.Entry[count];
+                int i = 0;
+                for (Map.Entry<String, Function<MapperBuilderContext, FieldMapper>> entry : this.mapperBuilders.entrySet()) {
+                    mappers[i++] = Map.entry(entry.getKey(), entry.getValue().apply(context));
+                }
+                return new MultiFields(Map.ofEntries(mappers));
             }
         }
 
@@ -1202,7 +1202,7 @@ public abstract class FieldMapper extends Mapper implements Cloneable {
         /**
          * @return the list of parameters defined for this mapper
          */
-        protected abstract List<Parameter<?>> getParameters();
+        protected abstract Parameter<?>[] getParameters();
 
         @Override
         public abstract FieldMapper build(MapperBuilderContext context);
